// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getStandardMenuMarkup by default should render the right structure 1`] = `
<div>
  <MenuItem
    active={false}
    href="/"
    key="Home0"
    link={true}
  >
    <a
      className="link item"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
  </MenuItem>
  <Submenu
    isMenuItem={true}
    isSearchable={false}
    isSimple={true}
    isTriggerUnderlined={false}
    isTriggeredOnHover={true}
    items={
      Array [
        Object {
          "href": "/la-casa-viva",
          "text": "La Casa Viva",
        },
        Object {
          "href": "/la-casa-muerta",
          "text": "La Casa Muerta",
        },
        Object {
          "href": "/the-white-lodge",
          "text": "The White Lodge",
        },
        Object {
          "href": "/the-black-lodge",
          "text": "The Black Lodge",
        },
      ]
    }
    key="All properties1"
    name={null}
    noResultsText="No results"
    onChange={[Function]}
    pointing="top left"
    value={null}
    willOpenAbove={false}
  >
    <Dropdown
      additionLabel="Add "
      additionPosition="top"
      className=""
      closeOnBlur={true}
      deburr={false}
      icon={
        <Icon
          color={null}
          hasBorder={false}
          isButton={false}
          isCircular={false}
          isColorInverted={false}
          isDisabled={false}
          isLabelLeft={false}
          labelText={null}
          labelWeight={null}
          name="caret down"
          path={null}
          size="small"
        />
      }
      item={true}
      minCharacters={1}
      name={null}
      noResultsMessage="No results"
      onChange={[Function]}
      openOnFocus={true}
      options={
        Array [
          Object {
            "href": "/la-casa-viva",
            "key": "La Casa Viva",
            "text": "La Casa Viva",
          },
          Object {
            "href": "/la-casa-muerta",
            "key": "La Casa Muerta",
            "text": "La Casa Muerta",
          },
          Object {
            "href": "/the-white-lodge",
            "key": "The White Lodge",
            "text": "The White Lodge",
          },
          Object {
            "href": "/the-black-lodge",
            "key": "The Black Lodge",
            "text": "The Black Lodge",
          },
        ]
      }
      pointing="top left"
      renderLabel={[Function]}
      scrolling={true}
      search={false}
      searchInput="text"
      selectOnBlur={true}
      selectOnNavigation={true}
      simple={true}
      trigger="All properties"
      upward={false}
      value={null}
      wrapSelection={true}
    >
      <div
        aria-expanded={false}
        className="ui item simple scrolling top left pointing dropdown"
        name={null}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        All properties
        <Icon
          color={null}
          hasBorder={false}
          isButton={false}
          isCircular={false}
          isColorInverted={false}
          isDisabled={false}
          isLabelLeft={false}
          labelText={null}
          labelWeight={null}
          name="caret down"
          onClick={[Function]}
          path={null}
          size="small"
        >
          <i
            className="icon small"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M20,8.5l-8,7-8-7Z"
                fill="currentColor"
              />
            </svg>
          </i>
        </Icon>
        <DropdownMenu>
          <div
            className="menu transition"
          >
            <DropdownItem
              active={false}
              href="/la-casa-viva"
              key="La Casa Viva"
              onClick={[Function]}
              selected={true}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="La Casa Viva"
            >
              <a
                aria-checked={false}
                aria-selected={true}
                className="selected item"
                href="/la-casa-viva"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="La Casa Viva"
                >
                  La Casa Viva
                </span>
              </a>
            </DropdownItem>
            <DropdownItem
              active={false}
              href="/la-casa-muerta"
              key="La Casa Muerta"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="La Casa Muerta"
            >
              <a
                aria-checked={false}
                aria-selected={false}
                className="item"
                href="/la-casa-muerta"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="La Casa Muerta"
                >
                  La Casa Muerta
                </span>
              </a>
            </DropdownItem>
            <DropdownItem
              active={false}
              href="/the-white-lodge"
              key="The White Lodge"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="The White Lodge"
            >
              <a
                aria-checked={false}
                aria-selected={false}
                className="item"
                href="/the-white-lodge"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="The White Lodge"
                >
                  The White Lodge
                </span>
              </a>
            </DropdownItem>
            <DropdownItem
              active={false}
              href="/the-black-lodge"
              key="The Black Lodge"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="The Black Lodge"
            >
              <a
                aria-checked={false}
                aria-selected={false}
                className="item"
                href="/the-black-lodge"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="The Black Lodge"
                >
                  The Black Lodge
                </span>
              </a>
            </DropdownItem>
          </div>
        </DropdownMenu>
      </div>
    </Dropdown>
  </Submenu>
  <MenuItem
    active={false}
    href="/"
    key="Contact Us2"
    link={true}
  >
    <a
      className="link item"
      href="/"
      onClick={[Function]}
    >
      Contact Us
    </a>
  </MenuItem>
  <MenuItem
    active={false}
    href="/"
    key="What to do3"
    link={true}
  >
    <a
      className="link item"
      href="/"
      onClick={[Function]}
    >
      What to do
    </a>
  </MenuItem>
</div>
`;

exports[`getStandardMenuMarkup if \`props.primaryCTA\` is passed should render the right structure 1`] = `
<div>
  <MenuItem
    active={false}
    href="/"
    key="Home0"
    link={true}
  >
    <a
      className="link item"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
  </MenuItem>
  <Submenu
    isMenuItem={true}
    isSearchable={false}
    isSimple={true}
    isTriggerUnderlined={false}
    isTriggeredOnHover={true}
    items={
      Array [
        Object {
          "href": "/la-casa-viva",
          "text": "La Casa Viva",
        },
        Object {
          "href": "/la-casa-muerta",
          "text": "La Casa Muerta",
        },
        Object {
          "href": "/the-white-lodge",
          "text": "The White Lodge",
        },
        Object {
          "href": "/the-black-lodge",
          "text": "The Black Lodge",
        },
      ]
    }
    key="All properties1"
    name={null}
    noResultsText="No results"
    onChange={[Function]}
    pointing="top left"
    value={null}
    willOpenAbove={false}
  >
    <Dropdown
      additionLabel="Add "
      additionPosition="top"
      className=""
      closeOnBlur={true}
      deburr={false}
      icon={
        <Icon
          color={null}
          hasBorder={false}
          isButton={false}
          isCircular={false}
          isColorInverted={false}
          isDisabled={false}
          isLabelLeft={false}
          labelText={null}
          labelWeight={null}
          name="caret down"
          path={null}
          size="small"
        />
      }
      item={true}
      minCharacters={1}
      name={null}
      noResultsMessage="No results"
      onChange={[Function]}
      openOnFocus={true}
      options={
        Array [
          Object {
            "href": "/la-casa-viva",
            "key": "La Casa Viva",
            "text": "La Casa Viva",
          },
          Object {
            "href": "/la-casa-muerta",
            "key": "La Casa Muerta",
            "text": "La Casa Muerta",
          },
          Object {
            "href": "/the-white-lodge",
            "key": "The White Lodge",
            "text": "The White Lodge",
          },
          Object {
            "href": "/the-black-lodge",
            "key": "The Black Lodge",
            "text": "The Black Lodge",
          },
        ]
      }
      pointing="top left"
      renderLabel={[Function]}
      scrolling={true}
      search={false}
      searchInput="text"
      selectOnBlur={true}
      selectOnNavigation={true}
      simple={true}
      trigger="All properties"
      upward={false}
      value={null}
      wrapSelection={true}
    >
      <div
        aria-expanded={false}
        className="ui item simple scrolling top left pointing dropdown"
        name={null}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        All properties
        <Icon
          color={null}
          hasBorder={false}
          isButton={false}
          isCircular={false}
          isColorInverted={false}
          isDisabled={false}
          isLabelLeft={false}
          labelText={null}
          labelWeight={null}
          name="caret down"
          onClick={[Function]}
          path={null}
          size="small"
        >
          <i
            className="icon small"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M20,8.5l-8,7-8-7Z"
                fill="currentColor"
              />
            </svg>
          </i>
        </Icon>
        <DropdownMenu>
          <div
            className="menu transition"
          >
            <DropdownItem
              active={false}
              href="/la-casa-viva"
              key="La Casa Viva"
              onClick={[Function]}
              selected={true}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="La Casa Viva"
            >
              <a
                aria-checked={false}
                aria-selected={true}
                className="selected item"
                href="/la-casa-viva"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="La Casa Viva"
                >
                  La Casa Viva
                </span>
              </a>
            </DropdownItem>
            <DropdownItem
              active={false}
              href="/la-casa-muerta"
              key="La Casa Muerta"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="La Casa Muerta"
            >
              <a
                aria-checked={false}
                aria-selected={false}
                className="item"
                href="/la-casa-muerta"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="La Casa Muerta"
                >
                  La Casa Muerta
                </span>
              </a>
            </DropdownItem>
            <DropdownItem
              active={false}
              href="/the-white-lodge"
              key="The White Lodge"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="The White Lodge"
            >
              <a
                aria-checked={false}
                aria-selected={false}
                className="item"
                href="/the-white-lodge"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="The White Lodge"
                >
                  The White Lodge
                </span>
              </a>
            </DropdownItem>
            <DropdownItem
              active={false}
              href="/the-black-lodge"
              key="The Black Lodge"
              onClick={[Function]}
              selected={false}
              style={
                Object {
                  "pointerEvents": "all",
                }
              }
              text="The Black Lodge"
            >
              <a
                aria-checked={false}
                aria-selected={false}
                className="item"
                href="/the-black-lodge"
                onClick={[Function]}
                role="option"
                style={
                  Object {
                    "pointerEvents": "all",
                  }
                }
              >
                <span
                  className="text"
                  key="The Black Lodge"
                >
                  The Black Lodge
                </span>
              </a>
            </DropdownItem>
          </div>
        </DropdownMenu>
      </div>
    </Dropdown>
  </Submenu>
  <MenuItem
    active={false}
    href="/"
    key="Contact Us2"
    link={true}
  >
    <a
      className="link item"
      href="/"
      onClick={[Function]}
    >
      Contact Us
    </a>
  </MenuItem>
  <MenuItem
    active={false}
    href="/"
    key="What to do3"
    link={true}
  >
    <a
      className="link item"
      href="/"
      onClick={[Function]}
    >
      What to do
    </a>
  </MenuItem>
  <MenuItem
    className="no-underline"
    link={true}
  >
    <div
      className="link item no-underline"
      onClick={[Function]}
    >
      <Button
        hasShadow={false}
        icon={null}
        isCompact={false}
        isDisabled={false}
        isFluid={false}
        isFormSubmit={false}
        isLoading={false}
        isPositionedRight={false}
        isRounded={true}
        isSecondary={false}
        onClick={[Function]}
        size={null}
      >
        <Button
          as="button"
          circular={true}
          className=""
          compact={false}
          disabled={false}
          floated="left"
          fluid={false}
          loading={false}
          onClick={[Function]}
          secondary={false}
          size={null}
          type="button"
        >
          <button
            className="ui circular left floated button"
            onClick={[Function]}
            role="button"
            type="button"
          >
            someText
          </button>
        </Button>
      </Button>
    </div>
  </MenuItem>
</div>
`;
